# hiae-cl

./: Cargo.toml  README.md
.cargo/: config.toml
benches/: aead.rs  mac.rs
src/: high.rs  lib.rs  low.rs  mid.rs
src/low/: aarch64.rs  generic.rs  x86_64.rs
