[package]
name = "hiae-cl"
version = "0.1.0"
edition = "2024"

[features]
small = []

[dependencies]
hybrid-array = "0.3.0"
aead = { version = "0.6.0-rc.0", git = "https://github.com/RustCrypto/traits/" }
digest = { version = "0.11.0-pre.10", features = [
    "mac",
], git = "https://github.com/RustCrypto/traits/" }
# crypto-common = { version = "0.2.0-rc.2", git = "https://github.com/RustCrypto/traits/" }
# block-buffer = "0.11.0-rc.4"
cipher = { version = "0.5.0-pre.8", git = "https://github.com/RustCrypto/traits/" }
subtle = "2"
cfg-if = "1"

aes = { version = "0.9.0-pre.3", features = ["hazmat"], git = "https://github.com/RustCrypto/block-ciphers" }

[patch.crates-io]
cipher = { version = "0.5.0-pre.8", git = "https://github.com/RustCrypto/traits/" }

[dev-dependencies]
hex-literal = "1"
aead = { version = "0.6.0-rc.0", git = "https://github.com/RustCrypto/traits/", features = ["alloc", "os_rng"] }
benchmark-simple = "0.1.10"
divan = "0.1.21"
rand_xoshiro = "0.7.0"

[profile.release]
opt-level = 3

[[bench]]
name = "aead"
harness = false

[[bench]]
name = "mac"
harness = false
